Правки по валидатору + ссылка

--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
             <img class="elements__picture" src="./images/Australia.jpg" alt="Пляж с черным песком в Австралии">
             <div class="elements__container">
               <span class="elements__text">Australia</span>
-              <!-- <img class="elements__icon" src="./images/heart.svg"> -->
+              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/City-of-Bristol.jpg" alt="Река возле города Бристоль, Великобритания">
             <div class="elements__container">
               <span class="elements__text">City of Bristol, United Kingdom</span>
-              <img class="elements__icon" src="./images/heart.svg">
+              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Los-Angeles.jpg" alt="Побережье Лос-Анджелеса, США">
             <div class="elements__container">
               <span class="elements__text">Los Angeles, United States</span>
-              <img class="elements__icon" src="./images/heart.svg">
+              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/maldives.jpg" alt="Мальдивы">
             <div class="elements__container">
               <span class="elements__text">Maldives</span>
-              <img class="elements__icon" src="./images/heart.svg">
+              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Monterey.jpg" alt="Берег залива Монтерей, США">
             <div class="elements__container">
               <span class="elements__text">Monterey, United States</span>
-              <img class="elements__icon" src="./images/heart.svg">
+              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Oslo.jpg" alt="Залив возле города Осло, Норвегия">
             <div class="elements__container">
               <span class="elements__text">Oslo, Norge</span>
-              <img class="elements__icon" src="./images/heart.svg">
+              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
             </div>
           </li>
         </ul>
