--- a/index.html
+++ b/index.html
@@ -11,60 +11,59 @@
   <div class="page__container">
     <header class="header">
       <img class="header__logo" alt="Логотип" src="./images/Logo.svg">
-      <div class="header__line"></div>
     </header>
     <main class="content">
       <section class="profile">
         <img class="profile__avatar" src="./images/Kusto.png" alt="Фотография профиля">
         <div class="profile__info">
           <h1 id="profile__name" class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button"></button>
+          <button type="button" class="profile__edit-button"></button>
           <p id="profile__job" class="profile__job">Исследователь океана</p>
         </div>
-        <button class="profile__add-button"></button>
+        <button type="button" class="profile__add-button"></button>
       </section>
       <section class="elements">
         <ul class="elements__list">
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Australia.jpg" alt="Пляж с черным песком в Австралии">
             <div class="elements__container">
-              <span class="elements__text">Australia</span>
-              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
+              <h2 class="elements__text">Australia</h2>
+              <button class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/City-of-Bristol.jpg" alt="Река возле города Бристоль, Великобритания">
             <div class="elements__container">
-              <span class="elements__text">City of Bristol, United Kingdom</span>
-              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
+              <h2 class="elements__text">City of Bristol, United Kingdom</h2>
+              <button class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Los-Angeles.jpg" alt="Побережье Лос-Анджелеса, США">
             <div class="elements__container">
-              <span class="elements__text">Los Angeles, United States</span>
-              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
+              <h2 class="elements__text">Los Angeles, United States</h2>
+              <button class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/maldives.jpg" alt="Мальдивы">
             <div class="elements__container">
-              <span class="elements__text">Maldives</span>
-              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
+              <h2 class="elements__text">Maldives</h2>
+              <button class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Monterey.jpg" alt="Берег залива Монтерей, США">
             <div class="elements__container">
-              <span class="elements__text">Monterey, United States</span>
-              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
+              <h2 class="elements__text">Monterey, United States</h2>
+              <button class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Oslo.jpg" alt="Залив возле города Осло, Норвегия">
             <div class="elements__container">
-              <span class="elements__text">Oslo, Norge</span>
-              <img class="elements__icon" src="./images/heart.svg" alt="кнопка лайка">
+              <h2 class="elements__text">Oslo, Norge</h2>
+              <button class="elements__button"></button>
             </div>
           </li>
         </ul>
@@ -74,10 +73,10 @@
       <p class="footer__author">&copy; 2020 Mesto Russia</p>
     </footer>
     <div class="popup">
-      <form class="popup__container">
+      <form name="popup" class="popup__container">
         <p class="popup__title">Редактировать профиль</p>
-        <input class="popup__name" type="text">
-        <input class="popup__job" type="text">
+        <input name="name" class="popup__input" type="text">
+        <input name="job" class="popup__input" type="text">
         <button type="submit" class="popup__save-button">Сохранить</button>
         <button type="button" class="popup__close-button"></button>
       </form>
