Исправление ошибок ревью 2

--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
             <img class="elements__picture" src="./images/Australia.jpg" alt="Пляж с черным песком в Австралии">
             <div class="elements__container">
               <h2 class="elements__text">Australia</h2>
-              <button class="elements__button"></button>
+              <button type="button" class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/City-of-Bristol.jpg" alt="Река возле города Бристоль, Великобритания">
             <div class="elements__container">
               <h2 class="elements__text">City of Bristol, United Kingdom</h2>
-              <button class="elements__button"></button>
+              <button type="button" class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Los-Angeles.jpg" alt="Побережье Лос-Анджелеса, США">
             <div class="elements__container">
               <h2 class="elements__text">Los Angeles, United States</h2>
-              <button class="elements__button"></button>
+              <button type="button" class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/maldives.jpg" alt="Мальдивы">
             <div class="elements__container">
               <h2 class="elements__text">Maldives</h2>
-              <button class="elements__button"></button>
+              <button type="button" class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Monterey.jpg" alt="Берег залива Монтерей, США">
             <div class="elements__container">
               <h2 class="elements__text">Monterey, United States</h2>
-              <button class="elements__button"></button>
+              <button type="button" class="elements__button"></button>
             </div>
           </li>
           <li class="elements__list-item">
             <img class="elements__picture" src="./images/Oslo.jpg" alt="Залив возле города Осло, Норвегия">
             <div class="elements__container">
               <h2 class="elements__text">Oslo, Norge</h2>
-              <button class="elements__button"></button>
+              <button type="button" class="elements__button"></button>
             </div>
           </li>
         </ul>
