fix: delete js file

--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
       </li>
     </template>
   </div>
-<script src="sripts/sript2.js"></script>
+<script src="sripts/sript.js"></script>
 </body>
 </html>
