fix: button validation

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     </div>
     <div class="popup">
       <div class="popup__fullScreen">
-        <figure class="popup__image-desription">
-          <img class="popup__image" src="" alt="">
-          <figcaption class="popup__image-subtitle"></figcaption>
+        <div class="popup__image-desription">
+          <img class="popup__image" src="#" alt="">
+          <p class="popup__image-subtitle"></p>
           <button type="button" class="popup__close-button"></button>
-        </figure>
+        </div>
       </div>
     </div>
     <template class="cardTemplate">
