fixed: card and popup DOM searching

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer class="footer">
       <p class="footer__author">&copy; 2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div id="editProfile" class="popup">
       <form name="profile" class="popup__container">
         <p class="popup__title">Редактировать профиль</p>
         <input name="name" class="popup__input" type="text">
@@ -39,7 +39,7 @@
         <button type="button" class="popup__close-button"></button>
       </form>
     </div>
-    <div class="popup">
+    <div id="addCard" class="popup">
       <form name="newPlace" class="popup__container">
         <p class="popup__title">Новое место</p>
         <input required name="placeName" class="popup__input" placeholder="Название" type="text">
@@ -48,7 +48,7 @@
         <button type="button" class="popup__close-button"></button>
       </form>
     </div>
-    <div class="popup">
+    <div id="openPicture" class="popup">
       <div class="popup__fullScreen">
         <div class="popup__image-desription">
           <img class="popup__image" src="#" alt="">
@@ -68,6 +68,6 @@
       </li>
     </template>
   </div>
-<script src="sripts/sript.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
