--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
             </label>
             <button
               type="submit"
-              disabled
-              class="popup__button popup__button_disabled"
+              class="popup__button"
             >
               Сохранить
             </button>
@@ -139,7 +138,7 @@
 
       <template class="cardTemplate">
         <li class="elements__list-item">
-          <img class="elements__picture" src="" alt="" />
+          <div class="elements__picture"></div>
           <div class="elements__container">
             <h2 class="elements__text"></h2>
             <button type="button" class="elements__like-button"></button>
@@ -150,10 +149,7 @@
 
     </div>
 
-    <script type="module" src="scripts/initialCards.js"></script>
-    <script type="module" src="scripts/constants.js"></script>
     <script type="module" src="scripts/index.js"></script>
-    <script type="module" src="scripts/Card.js"></script>
-    <script type="module" src="scripts/FormValidator.js"></script>
+
   </body>
 </html>
