--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Сервис обмена фотографиями" />
   <meta name="author" content="Kirill Shashichev" />
-  <link rel="stylesheet" href="./pages/index.css" />
-  <link rel="shortcut icon" href="./images/camera.png" type="image/png">
+  <link rel="shortcut icon" href="<%=require('./images/camera.png')%>" type="image/png">
   <title>Mesto - здесь собраны лучшие фотографии</title>
 </head>
 
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <img class="header__logo" alt="Логотип" src="./images/Logo-white.svg" />
+      <img class="header__logo" alt="Логотип" src="<%=require('./images/Logo-white.svg')%>" />
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" title="Аватар профиля" src="./images/brent.jpg" alt="Фотография профиля" />
+        <img class="profile__avatar" title="Аватар профиля" src="<%=require('./images/brent.jpg')%>" alt="Фотография профиля" />
         <div class="profile__info">
           <h1 id="profile__name" class="profile__name">Brent Olson</h1>
           <button type="button" title="Редактировать профиль" class="profile__edit-button"></button>
@@ -42,12 +41,12 @@
         <fieldset class="popup__set">
           <p class="popup__title">Редактировать профиль</p>
           <label class="popup__form-field">
-            <input name="name" required minlength="2" maxlength="40" class="popup__input" id="popup__name-input"
+            <input name="name" placeholder="Имя (только буквы)" required pattern="[a-zA-ZА-Яа-яЁё\s]{2,40}" maxlength="40" class="popup__input" id="popup__name-input"
               type="text" />
             <span id="popup__name-input-error" class="popup__input-error"></span>
           </label>
           <label class="popup__form-field">
-            <input name="job" required minlength="2" maxlength="200" class="popup__input" id="popup__job-input"
+            <input name="job" placeholder="Профессия (только буквы)" required  pattern="[a-zA-ZА-Яа-яЁё\s]{2,200}" maxlength="200" class="popup__input" id="popup__job-input"
               type="text" />
             <span id="popup__job-input-error" class="popup__input-error"></span>
           </label>
@@ -67,7 +66,7 @@
           <p class="popup__title">Новое место</p>
           <label class="popup__form-field">
             <input name="placeName" class="popup__input" id="popup__placeName-input" required minlength="1"
-              maxlength="30" placeholder="Название" type="text" />
+              maxlength="30" placeholder="Название карточки" type="text" />
             <span id="popup__placeName-input-error" class="popup__input-error"></span>
           </label>
           <label class="popup__form-field">
@@ -85,7 +84,7 @@
     <div id="openPicture" class="popup">
       <div class="popup__fullScreen">
         <div class="popup__image-desription">
-          <img class="popup__image" src="#" alt="" />
+          <img class="popup__image" src="#" alt="Фото в попапе с карточкой" />
           <p class="popup__image-subtitle"></p>
           <button type="button" class="popup__close-button"></button>
         </div>
@@ -106,7 +105,6 @@
 
   </div>
 
-  <script type="module" src="./pages/index.js"></script>
 
 </body>
 
