fix: исправить отправку запроса на редактирование профиля

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
           <button title="Загрузить новый аватар" class="profile__avatar-edit-button"></button>
         </div>
         <div class="profile__info">
-          <h1 id="profile__name" class="profile__name">Brent Olson</h1>
+          <h1 id="profile__name" class="profile__name">Данные загружаются...</h1>
           <button type="button" title="Редактировать профиль" class="profile__edit-button"></button>
-          <p id="profile__job" class="profile__job">Фотограф из США</p>
+          <p id="profile__job" class="profile__job"></p>
         </div>
         <button type="button" title="Добавить новую фотографию" class="profile__add-button"></button>
       </section>
@@ -36,7 +36,7 @@
     </main>
 
     <footer class="footer">
-      <p class="footer__author">&copy; 2020 Kirill Shashichev</p>
+      <p class="footer__author">&copy; 2020 Kirill Shashichev 💜 Яндекс Практикум</p>
     </footer>
 
     <!-- Попап редактирования -->
