style: добавить спиннер в профиль

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="profile__info">
           <h1 id="profile__name" class="profile__name">Кто здесь?</h1>
-          <p id="profile__job" class="profile__job">смотрим...</p>
+          <p id="profile__job" class="profile__job">Смотрим<span class="spinner"><i class="rotation"></i></span></p>
           <button type="button" title="Редактировать профиль" class="profile__edit-button"></button>
         </div>
         <button type="button" title="Добавить новую фотографию" class="profile__add-button"></button>
