--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="Сервис обмена фотографиями" />
+  <meta name="description" content="Сервис обмена фото" />
   <meta name="author" content="Kirill Shashichev" />
   <link rel="shortcut icon" href="<%=require('./images/camera.png')%>" type="image/png">
-  <title>Mesto - здесь собраны лучшие фотографии</title>
+  <title>Mesto - нет лучше места, чтобы поделиться красивыми фото</title>
 </head>
 
 <body class="page">
