--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
 
     <template class="cardTemplate">
       <li class="elements__list-item">
-        <img src="#" class="elements__picture" title="Посмотреть фотографию" alt="Шаблон фото"></img>
+        <img src="#" class="elements__picture" title="Посмотреть фотографию" alt="Шаблон фото"/>
         <div class="elements__container">
           <h2 class="elements__text"></h2>
           <button type="button" title="Удалить карточку" class="elements__delete-button"></button>
