fix: удалить eslint

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <img class="header__logo" alt="Логотип" src="<%=require('./images/Logo-white.svg')%>" />
+      <img class="header__logo" alt="Логотип" src="<%=require('./images/Logo-white.svg')%>">
     </header>
     <main class="content">
       <section class="profile">
@@ -128,7 +128,7 @@
 
     <template class="cardTemplate">
       <li class="elements__list-item">
-        <img src="#" class="elements__picture" title="Посмотреть фотографию" alt="Шаблон фото"/>
+        <img src="#" class="elements__picture" title="Посмотреть фотографию" alt="Шаблон фото" />
         <div class="elements__container">
           <h2 class="elements__text"></h2>
           <button type="button" title="Удалить карточку" class="elements__delete-button"></button>
